Fixed issue with popups blocking pointer events while invisible

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -123,7 +123,7 @@ $page-margin: 10px;
   transition: visibility 0s, opacity 0.3s linear;
 }
 
-.invisible form {
+.invisible .form {
   pointer-events: none !important;
 }
 
@@ -179,6 +179,7 @@ $page-margin: 10px;
 .popup-menu > .form {
   pointer-events: initial;
 }
+
 //Error boxes
 .error_display {
   width: calc(100% - 20px);
